--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@ body {
     display: flex;
     font-family: 'Cormorant SC', serif;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
-ul {
-    list-style: none;
-}
 
 a {
     text-decoration: none;
@@ -18,6 +18,8 @@ a {
 
 ul {
     list-style: none;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .header, .hero {
@@ -31,40 +33,42 @@ ul {
     color: #F9FAF8;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-
-    flex: 1;
+    justify-content: space-between;
+    max-height: 100px;
+    padding-top: 20px;
 }
 
 .logo {
     display: flex;
-    align-items: center;
     font-weight: bold;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-left: 20%;
 }
 
 .links {
-    gap: 15px;
     display: flex;
+    justify-content: flex-end;
+    margin: 0;
+    gap: 30px;
+    /* eureka moment in terms of positioning */
+    padding-right: 20%;
 }
 
 /* this is hero part */
 
 .heromain {
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 40px;
-    max-width: 900px;
-    padding: 80px 0;
-    padding-left: 320px;
+    flex: 1;
+    gap: 100px;
 }
 
 .heroleft {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: flex-start;
     max-width: 400px;
+    padding-left: 20%;
 }
 
 .herotext1 {
@@ -78,10 +82,15 @@ ul {
     color: #E5E7EB
 }
 
+/* really need to work this out */
+
 .heroimg {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+img {
     width: 300px;
     height: 150px;
-    
 }
