--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ ul {
     justify-content: space-between;
     max-height: 100px;
     padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 .logo {
@@ -59,7 +60,7 @@ ul {
 .heromain {
     display: flex;
     align-items: center;
-    flex: 1;
+    justify-content: space-between;
     gap: 100px;
 }
 
@@ -86,8 +87,9 @@ ul {
 
 .heroimg {
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
+    padding-right: 20%;
 }
 
 img {
