--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ ul {
     padding-right: 20%;
 }
 
+
 /* this is hero part */
 
 .heromain {
@@ -62,14 +63,16 @@ ul {
     align-items: center;
     justify-content: space-between;
     gap: 100px;
+    padding-bottom: 100px;
 }
 
 .heroleft {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    max-width: 400px;
+    max-width: 500px;
     padding-left: 20%;
+    gap: 10px;
 }
 
 .herotext1 {
@@ -83,7 +86,15 @@ ul {
     color: #E5E7EB
 }
 
-/* really need to work this out */
+.button1 {
+    max-width: 90px;
+    min-height: 30px;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 7px;
+    border: 0;
+    font-weight: bold;
+}
 
 .heroimg {
     display: flex;
@@ -93,6 +104,50 @@ ul {
 }
 
 img {
-    width: 300px;
-    height: 150px;
+    width: 500px;
+    height: 200px;
+}
+
+/* end of hero */
+
+.info {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: white;
+    padding-bottom: 100px;
+}
+
+.infotext {
+    padding-top: 30px;
+    font-size: 36px;
+    font-weight: 1000;
+    color: #1F2937
+}
+
+/* end of info */
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 0 20%;
+    padding-bottom: 100px;
+}
+
+.quotext {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.thor {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding-left: 30%;
+    font-weight: 1000;
+    font-size: 25px;
 }
