--- a/styles.css
+++ b/styles.css
@@ -101,28 +101,57 @@ ul {
     align-items: center;
     justify-content: center;
     padding-right: 20%;
-}
-
-img {
     width: 500px;
     height: 200px;
 }
 
+
 /* end of hero */
 
 .info {
-    display: flex;
-    align-items: flex-start;
+    display: flex; 
     justify-content: center;
+    align-items: center;
     background-color: white;
-    padding-bottom: 100px;
+    flex-direction: column;
+    padding-bottom: 50px;
 }
 
 .infotext {
-    padding-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 30px 0;
     font-size: 36px;
     font-weight: 1000;
     color: #1F2937
+    
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    padding: 50px;
+
+}
+
+.imgbox {
+   min-height: 150px;
+   min-width: 150px;
+   max-height: 150px;
+   max-width: 150px;
+}
+
+.text {
+    display: flex;
+}
+
+.box {
+    display: flex;
+    max-width: 150px;
+    flex-direction: column;
+    padding: 0 20px;
+
 }
 
 /* end of info */
