--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC&family=Roboto:ital,wght@1,100&display=swap');
 body {
     display: flex;
-    font-family: 'Cormorant SC', serif;
+    font-family: Roboto, sans-serif;
     flex-direction: column;
     margin: 0;
     padding: 0;
@@ -90,7 +90,7 @@ ul {
     max-width: 90px;
     min-height: 30px;
     background-color: #3882F6;
-    color: white;
+    color: #E5E7EB;
     border-radius: 7px;
     border: 0;
     font-weight: bold;
@@ -132,6 +132,8 @@ ul {
     display: flex;
     flex-direction: row;
     padding: 50px;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -144,14 +146,18 @@ ul {
 
 .text {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    color: grey;
+    padding: 1px;
 }
 
 .box {
     display: flex;
-    max-width: 150px;
+    max-width: 140px;
     flex-direction: column;
     padding: 0 20px;
-
 }
 
 /* end of info */
@@ -160,8 +166,7 @@ ul {
     display: flex;
     flex-direction: column;
     background-color: #E5E7EB;
-    padding: 0 20%;
-    padding-bottom: 100px;
+    padding: 100px 20%;
 }
 
 .quotext {
@@ -179,4 +184,54 @@ ul {
     padding-left: 30%;
     font-weight: 1000;
     font-size: 25px;
+}
+
+/* end of quote */
+
+.bluebox {
+    background-color: #3882F6;
+    color: white;
+    margin: 7% 10%;
+    padding: 70px 0;
+    border-radius: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+
+.cta {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.belowcta {
+    font-size: 20px;
+
+}
+
+.button2 {
+    max-width: 130px;
+    min-height: 30px;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border-radius: 7px;
+    border: 2px;
+    border-color: white;
+    border-style: solid;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 10px 15px;
+}
+
+/* end of bluebox */
+
+.footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
 }
